[package]
name = "jake"
version = "0.7.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/AstraBert/jake"
description = "Make-like task executor for Unix OS."
keywords = ["make", "task-execution", "automation", "cli"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
dotenv = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.149"
toml = { version = "1.0.1", features = ["preserve_order"] }

[dev-dependencies]
serial_test = "3.4.0"
